--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>0.10.0</version>
+                <configuration>
+                    <to>
+                        <image>leoat/bankapp</image>
+                    </to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
